app1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
        - name: app-a
          image: ghcr.io/inckrisz/app1-js:latest
          ports:
            - containerPort: 3000
