app1/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-a-vs
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - js-app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: app-a.default.svc.cluster.local
            port:
              number: 80
